// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RelationWidget > renders a full relation view widget component 1`] = `
<a
  className="metadata relation widget"
  href="/a-page"
  onClick={[Function]}
  target={null}
  title=""
>
  <svg
    className="icon icon-margin"
    dangerouslySetInnerHTML={
      {
        "__html": undefined,
      }
    }
    onClick={null}
    style={
      {
        "fill": "#878f93",
        "height": "20px",
        "width": "auto",
      }
    }
  />
  Foo Bar
</a>
`;

exports[`RelationWidget > renders a full relation view widget component with children 1`] = `
<a
  className="metadata relation widget Document private"
  href="/a-page"
  onClick={[Function]}
  target={null}
  title="Bar Foo"
>
  <svg
    className="icon icon-margin"
    dangerouslySetInnerHTML={
      {
        "__html": "<title>Document</title>undefined",
      }
    }
    onClick={null}
    style={
      {
        "fill": "#878f93",
        "height": "20px",
        "width": "auto",
      }
    }
  />
  <strong>
    Foo Bar
  </strong>
</a>
`;

exports[`RelationWidget > renders a relation view widget component 1`] = `
<a
  className="metadata relation widget"
  href="/"
  onClick={[Function]}
  target={null}
  title=""
>
  <svg
    className="icon icon-margin"
    dangerouslySetInnerHTML={
      {
        "__html": undefined,
      }
    }
    onClick={null}
    style={
      {
        "fill": "#878f93",
        "height": "20px",
        "width": "auto",
      }
    }
  />
  Foo Bar
</a>
`;

exports[`RelationWidget > renders an empty relation view widget component 1`] = `null`;
